--- a/register.html
+++ b/register.html
@@ -26,12 +26,9 @@
 
     <div class="container">
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card o-hidden border-0 shadow-lg my-5"  style="width: 50%;">
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
-                <div class="row">
-                    <!-- <div class="col-lg-5 d-none d-lg-block bg-register-image"></div> -->
-                    <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
@@ -73,8 +70,6 @@
                                 <a class="small" href="login.html">Already have an account? Login!</a>
                             </div>
                         </div>
-                    </div>
-                </div>
             </div>
         </div>
 
