--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                <div class="sidebar-brand-icon">
+                    <!-- <i class="fas fa-laugh-wink"></i> -->
+                    <img src="./img/simo-logo3.jpg" alt="">
                 </div>
                 <div class="sidebar-brand-text mx-3">LIBER PMS <sup></sup></div>
             </a>
