--- a/register.html
+++ b/register.html
@@ -26,9 +26,12 @@
 
     <div class="container">
 
-        <div class="card o-hidden border-0 shadow-lg my-5"  style="width: 50%;">
+        <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
+                <div class="row">
+                    <!-- <div class="col-lg-5 d-none d-lg-block bg-register-image"></div> -->
+                    <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
@@ -61,8 +64,9 @@
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </a>
-                                <hr>
+                            
                             </form>
+                            <hr>
                             <div class="text-center">
                                 <a class="small" href="forgot-password.html">Forgot Password?</a>
                             </div>
@@ -70,6 +74,8 @@
                                 <a class="small" href="login.html">Already have an account? Login!</a>
                             </div>
                         </div>
+                    </div>
+                </div>
             </div>
         </div>
 
